--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -162,6 +162,16 @@ Support for Python 3.4 and below has been officially dropped.
 - |Fix| Fixed a bug in the 'saga' solver where the weights would not be
   correctly updated in some cases. :issue:`11646` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.discriminant_analysis`
+....................................
+
+- |Fix| A ``ChangedBehaviourWarning`` is now raised when
+  ``LinearDiscriminantAnalysis`` is given as parameter ``n_components > min
+  (n_features, n_classes - 1)``, and ``n_components`` is changed to ``min
+  (n_features, n_classes - 1)`` if so. Previously the change
+  was made, but silently. :pr:`11526` by :user:`William de
+  Vazelhes<wdevazelhes>`.
+
 Multiple modules
 ................
 
