--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -22,6 +22,12 @@ random sampling procedures.
 
 - Decision trees and derived ensembles when both `max_depth` and
   `max_leaf_nodes` are set. |Fix|
+- :func:`decomposition.sparse_encode()` with `algorithm='lasso_lars'` |Fix|
+- :func:`decomposition.dict_learning()` and
+  :func:`decomposition.dict_learning_online()` |Fix|
+- :class:`decomposition.SparseCoder`,
+  :class:`decomposition.DictionaryLearning`, and
+  :class:`decomposition.MiniBatchDictionaryLearning` |Fix|
 - :class:`decomposition.SparseCoder` with `algorithm='lasso_lars'` |Fix|
 - :class:`linear_model.LogisticRegression` and
   :class:`linear_model.LogisticRegressionCV` with 'saga' solver. |Fix|
@@ -59,16 +65,20 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`slkearn.decomposition`
 ............................
 
-- |Fix| `sparse_encode()` now passes the `max_iter` to the underlying
-  `LassoLarse` when `algorithm='lasso_lars'`. :issue:`12650` by user:`Adrin
-  Jalali <adrinjalali>`.
-- |Enhancement| `dict_learning()` and `dict_learning_online()` now accept
-  `method_max_iter` and pass it to `sparse_encode`. :issue:`12650` by
+- |Fix| :func:`decomposition.sparse_encode()` now passes the `max_iter` to the
+  underlying `LassoLarse` when `algorithm='lasso_lars'`. :issue:`12650` by
   user:`Adrin Jalali <adrinjalali>`.
-- |Enhancement| `SparseCoder`, `DictionaryLearning`, and
-  `MiniBatchDictionaryLearning` now take a `transform_max_iter` parameter and
-  pass it to either `dict_learning()` or `sparse_encode()`. :issue:`12650` by
-  user:`Adrin Jalali <adrinjalali>`.
+- |Enhancement| :func:`decomposition.dict_learning()` and
+  :func:`decomposition.dict_learning_online()` now accept `method_max_iter` and
+  pass it to `sparse_encode`. :issue:`12650` by user:`Adrin Jalali
+  <adrinjalali>`.
+- |Enhancement| :class:`decomposition.SparseCoder`,
+  :class:`decomposition.DictionaryLearning`, and
+  :class:`decomposition.MiniBatchDictionaryLearning` now take a
+  `transform_max_iter` parameter and pass it to either
+  :func:`decomposition.dict_learning()` or
+  :func:`decomposition.sparse_encode()`. :issue:`12650` by user:`Adrin Jalali
+  <adrinjalali>`.
 
 :mod:`sklearn.linear_model`
 ...........................
