--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -116,8 +116,8 @@ Support for Python 3.4 and below has been officially dropped.
   :issue:`12334` by :user:`Emmanuel Arias <eamanu@eamanu.com>`,
   `Joel Nothman`_ and `Andreas Müller`_
 
-  -|Fix| A `DecprecationWarning`` is now raised when :func:`metrics.hamming_loss` 
-  is given a labels parameter.
+  -|API| The parameter ``labels`` is deprecated in version 0.21 and will be
+  removed in version 0.23.
   :issue:`10580` by :user:`Reshama Shaikh <reshamas>` and `Sandra 
   Mitrovic <SandraMNE>`.
 
