--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -7,7 +7,7 @@
 Version 0.20.2
 ==============
 
-**XX, 2019**
+**December 20, 2018**
 
 This is a bug-fix release with some minor documentation improvements and
 enhancements to features released in 0.20.0.
@@ -55,6 +55,17 @@ Changelog
   the data was split into chunks instead of being pre-computed on whole data.
   :issue:`12701` by :user:`Jeremie du Boisberranger <jeremiedbb>`.
 
+Code and Documentation Contributors
+-----------------------------------
+
+With thanks to:
+
+
+adanhawth, Adrin Jalali, Albert Thomas, Andreas Mueller, Dan Stine, Feda Curic,
+Hanmin Qin, Jan S, jeremiedbb, Joel Nothman, Joris Van den Bossche,
+josephsalmon, Katrin Leinweber, Loic Esteve, Muhammad Hassaan Rafique, Nicolas
+Hug, Olivier Grisel, Paul Paczuski, Reshama Shaikh, Sam Waterbury, Shivam
+Kotwalia, Thomas Fan
 
 .. _changes_0_20_1:
 
