--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -89,7 +89,7 @@ Support for Python 3.4 and below has been officially dropped.
 
 - |API| :func:`linear_model.logistic_regression_path` is deprecated
   in version 0.21 and will be removed in version 0.23.
-  :issue:`TODO` by :user:`Nicolas Hug <NicolasHug>`.
+  :issue:`12821` by :user:`Nicolas Hug <NicolasHug>`.
 
 :mod:`sklearn.manifold`
 ............................
