--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -142,7 +142,8 @@ Support for Python 3.4 and below has been officially dropped.
 .....................
 - |Feature| The :class:`impute.SimpleImputer` has a new parameter
   ``'add_indicator'``, which simply stacks a :class:`impute.MissingIndicator`
-  transform into the output of the imputer's transform. :issue:`12583` by
+  transform into the output of the imputer's transform. That allowing a predictive
+  estimator to account for missingness. :issue:`12583` by
   :user:`Danylo Baibak <DanilBaibak>`.
 
 Multiple modules
