--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -132,7 +132,8 @@ Support for Python 3.4 and below has been officially dropped.
   Mitrovic <SandraMNE>`.
 
 - |Feature| Added multiclass support to :func:`metrics.roc_auc_score`.
-  :issue:`3298` by :user:`Thomas Fan <thomasjpfan>`.
+  :issue:`3298` by :user:`Kathy Chen <kathyxchen>`,
+  :user:`Mohamed Maskani <maskani-moh>`, and :user:`Thomas Fan <thomasjpfan>`.
 
 :mod:`sklearn.model_selection`
 ..............................
