--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -144,6 +144,11 @@ Support for Python 3.4 and below has been officially dropped.
   :func:`~model_selection.validation_curve` only the latter is required.
   :issue:`12613` and :issue:`12669` by :user:`Marc Torrellas <marctorrellas>`.
 
+- |Enhancement| Some :term:`CV splitter` classes and
+  `model_selection.train_test_split` now raise ``ValueError`` when the
+  resulting train set is empty. :issue:`12861` by :user:`Nicolas Hug
+  <NicolasHug>`.
+
 :mod:`sklearn.neighbors`
 ........................
 
