Modify whats new

--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -149,8 +149,7 @@ Support for Python 3.4 and below has been officially dropped.
 - |Enhancement| Add `min_fpr`, `min_tpr`, and `max_tpr` options to
   :func:`metrics.roc_auc_score` to calculate the standardize partial AUC
   over the range of [`min_fpr`, `max_fpr`].
-  :issue:`11668` by :user:`Joel Nothman`_ and
-  `Zijie (ZJ) Poh <poh.zijie@gmail.com>`
+  :issue:`11668` by :user:`Joel Nothman`_ and `Zijie (ZJ) Poh <zjpoh>`
 
 - |API| The parameter ``labels`` in :func:`metrics.hamming_loss` is deprecated
   in version 0.21 and will be removed in version 0.23.
