Add whats new entry

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -15,6 +15,12 @@ enhancements to features released in 0.20.0.
 Changelog
 ---------
 
+:mod:`sklearn.cluster`
+......................
+
+- |Fix| Fixed a bug in :class:`cluster.KMeans` to use available threads.
+  :issue:`12949` by :user:`Prabakaran Kumaresshan <nixphix>`.
+
 :mod:`sklearn.linear_model`
 ...........................
 
