Change :meth: to :func:

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -25,7 +25,7 @@ Changelog
 :mod:`sklearn.decomposition`
 ...........................
 
-- |Fix| Fixed a bug in :meth:`decomposition.sparse_encode` where computation was single
+- |Fix| Fixed a bug in :func:`decomposition.sparse_encode` where computation was single
   threaded when `n_jobs > 1` or `n_jobs = -1`.
   :issue:`13005` by :user:`Prabakaran Kumaresshan <nixphix>`.
 
