--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -122,6 +122,14 @@ Support for Python 3.4 and below has been officially dropped.
   in version 0.21 and will be removed in version 0.23.
   :issue:`12821` by :user:`Nicolas Hug <NicolasHug>`.
 
+:mod:`sklearn.mixture`
+............................
+
+- |Feature| :class:`mixture.GaussianMixture` and 
+  :class:`mixture.BayesianGaussianMixture` can now be initialized using
+  k-means++ and random data points. :issue:`11101`by 
+  :user:`Gordon Walsh <g-walsh>`.
+
 :mod:`sklearn.manifold`
 ............................
 
