--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -84,7 +84,7 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.externals`
 ........................
 
-- |API| Deprecate :mod:`externals.six` since we've dropped support for
+- |API| Deprecated :mod:`externals.six` since we have dropped support for
   Python 2.7. :issue:`12916` by :user:`Hanmin Qin <qinhanmin2014>`.
 
 :mod:`sklearn.linear_model`
