--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -63,9 +63,10 @@ Support for Python 3.4 and below has been officially dropped.
 
 - |API| The default value of the :code:`init` argument in
   :func:`decomposition.non_negative_factorization` will change from
-  :code:`random` to :code:`None` to match :class:`decomposition.NMF`
-  in version 0.23.  A FutureWarning is raised when the default value
-  is used.  :issue:`12988` by :user:`Zijie (ZJ) Poh <zjpoh>`.
+  :code:`random` to :code:`None` in version 0.23 to make it consistent with
+  :class:`decomposition.NMF`. A FutureWarning is raised when
+  the default value is used.
+  :issue:`12988` by :user:`Zijie (ZJ) Poh <zjpoh>`.
 
 :mod:`sklearn.discriminant_analysis`
 ....................................
