--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -262,10 +262,13 @@ Support for Python 3.4 and below has been officially dropped.
 - |Feature| Adds minimal cost complexity pruning to
   :class:`tree.DecisionTreeClassifier`, :class:`tree.DecisionTreeRegressor`,
   :class:`tree.ExtraTreeClassifier`, :class:`tree.ExtraTreeRegressor`,
-  :class:`forest.RandomForestClassifier`, 
-  :class:`forest.RandomForestRegressor`,
-  :class:`forest.ExtraTreesClassifier`, :class:`forest.ExtraTreesRegressor`,
-  and :class:`forest.RandomTreesEmbedding`.
+  :class:`ensemble.RandomForestClassifier`, 
+  :class:`ensemble.RandomForestRegressor`,
+  :class:`ensemble.ExtraTreesClassifier`, 
+  :class:`ensemble.ExtraTreesRegressor`,
+  :class:`ensemble.RandomTreesEmbedding`, 
+  :class:`ensemble.GradientBoostingClassifier`, 
+  and :class:`ensemble.GradientBoostingRegressor`.
   :issue:`12887` by :user:`Thomas Fan <thomasjpfan>`.
 
 - |Fix| Fixed an issue with :class:`tree.BaseDecisionTree`
