--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -201,7 +201,8 @@ Support for Python 3.4 and below has been officially dropped.
   :issue:`12613` and :issue:`12669` by :user:`Marc Torrellas <marctorrellas>`.
 
 - |Fix| Fixed a bug where :class:`model_selection.StratifiedKFold`
-  shuffles each stratification with the same ``random_state``.
+  shuffles each class's samples with the same ``random_state``,
+  making ``shuffle=True`` ineffective.
   :issue:`13124` by :user:`Hanmin Qin <qinhanmin2014>`.
 
 :mod:`sklearn.neighbors`
