--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -43,6 +43,15 @@ Support for Python 3.4 and below has been officially dropped.
     section should be ordered according to the label ordering above. Entries
     should end with: :issue:`123456` by :user:`Joe Bloggs <joeongithub>`.
 
+:mod:`sklearn.base`
+...................
+
+- |API| The default value of ``multioutput`` in the ``score`` method of
+  :class:`base.RegressorMixin` will change from ``variance_weighted`` to
+  ``uniform_average`` in 0.23 to keep consistent with :func:`metrics.r2_score`.
+  This will influence the ``score`` method of all the regressors.
+  :issue:`13157` by :user:`Hanmin Qin <qinhanmin2014>`.
+
 :mod:`sklearn.calibration`
 ..........................
 
