--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -68,6 +68,14 @@ Support for Python 3.4 and below has been officially dropped.
   the default value is used.
   :issue:`12988` by :user:`Zijie (ZJ) Poh <zjpoh>`.
 
+- |API| The default value of the :code:`whiten` argument in
+  :func:`decomposition.FastICA` will change from
+  :code:`True` to :code:`'unit-variance` in version 0.23.
+  A FutureWarning is raised when the default value is used.
+  :issue:`13056` by :user:`Facundo Ferrin <fferrin>`. Thanks to
+  :user:`<adrinjalali>`, :user:`<JesseLivezey>` and :user:`<jnothman>` for
+  help me with my first PR.
+
 :mod:`sklearn.discriminant_analysis`
 ....................................
 
