--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -22,8 +22,8 @@ random sampling procedures.
   `max_leaf_nodes` are set. |Fix|
 - :class:`linear_model.LogisticRegression` and
   :class:`linear_model.LogisticRegressionCV` with 'saga' solver. |Fix|
-- :class:`ensemble.GradientBoostingClassifier` for multiclass
-  classification. |Fix|
+- :class:`ensemble.GradientBoostingClassifier` |Fix|
+- :class:`neural_network.MLPClassifier` |Fix|
 
 Details are listed in the changelog below.
 
@@ -108,6 +108,10 @@ Support for Python 3.4 and below has been officially dropped.
 - |Fix| Fixed a bug in :class:`ensemble.GradientBoostingClassifier` where
   the gradients would be incorrectly computed in multiclass classification
   problems. :issue:`12715` by :user:`Nicolas Hug<NicolasHug>`.
+
+- |Fix| Early stopping is now checked on a stratified split for
+  :class:`ensemble.GradientBoostingClassifier`.
+  :issue:`TODO` by :user:`Nicolas Hug<NicolasHug>`.
 
 - |Fix| Fixed a bug in :mod:`ensemble` where the ``predict`` method would
   error for multiclass multioutput forests models if any targets were strings.
@@ -236,6 +240,10 @@ Support for Python 3.4 and below has been officially dropped.
 - |Fix| Fixed a bug in :class:`neural_network.MLPClassifier` and
   :class:`neural_network.MLPRegressor` where the option :code:`shuffle=False`
   was being ignored. :issue:`12582` by :user:`Sam Waterbury <samwaterbury>`.
+
+- |Fix| Early stopping is now checked on a stratified split for
+  :class:`neural_network.MLPClassifier`.
+  :issue:`TODO` by :user:`Nicolas Hug<NicolasHug>`.
 
 :mod:`sklearn.pipeline`
 .......................
