--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -242,7 +242,7 @@ Support for Python 3.4 and below has been officially dropped.
   was being ignored. :issue:`12582` by :user:`Sam Waterbury <samwaterbury>`.
 
 - |Fix| Early stopping is now checked on a stratified split for
-  :class:`neural_network.MLPClassifier`.
+  :class:`neural_network.MLPClassifier` (except in the multilabel case).
   :issue:`13164` by :user:`Nicolas Hug<NicolasHug>`.
 
 :mod:`sklearn.pipeline`
