--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -64,8 +64,8 @@ Changelog
   combination with ``handle_unknown='ignore'``.
   :issue:`12881` by `Joris Van den Bossche`_.
 
-- |Fix| Redundant bins (i.e., bins whose width <= 0) are removed with a warning
-  in :class:`preprocessing.KBinsDiscretizer`.
+- |Fix| Bins whose width <= 0 are removed with a warning in
+  :class:`preprocessing.KBinsDiscretizer`.
   :issue:`13165` by :user:`Hanmin Qin <qinhanmin2014>`.
 
 :mod:`sklearn.feature_extraction.text`
